--- a/app/views/inventory.html
+++ b/app/views/inventory.html
@@ -13,16 +13,16 @@
       <tbody>
         <tr ng-repeat="item in inventory">
           <td>
-            <input value="{{item.itemName}}"/>
+            <input type="text" value="{{item.itemName}}" class="form-control"/>
           </td>
           <td>
-            <input value="{{item.code}}"/>
+            <input type="text" value="{{item.code}}" class="form-control"/>
           </td>
           <td>
-            <input value="{{item.price}}"/>
+            <input type="text" value="{{item.price}}" class="form-control"/>
           </td>
           <td>
-            <input value="{{item.desc}}"/>
+            <input type="text" value="{{item.desc}}" class="form-control"/>
           </td>
         </tr>
       </tbody>
